<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">City4Age</string>
    <string name="note">Note</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleteConfirmMessage">Are you sure you want to delete the route?</string>
    <string name="nointernet">This application requires an internet connection in order to save data to server. Please turn on your WiFi/Mobile Data.</string>
    <string name="nolocation">City4Age is still searching for your location</string>
    <string name="routeSavedOnServerAndLocally">Route has been saved</string>
    <string name="routeSavedOnlyLocally">Route saved, but only locally. Please turn on your WiFi/Mobile Data</string>
    <string name="routetrackingstarted">Route tracking has started</string>
    <string name="routessavingfailed">Route could not be saved</string>
    <string name="routedatacleared">Route data cleared</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="list">List</string>
    <string name="share">Share</string>
    <string name="weather">Weather</string>
    <string name="traffic">Traffic</string>
    <string name="title_activity_route_list">RouteListActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="av_speed_lbl">Aver. Speed (km/h)</string>
    <string name="max_speed_lbl">Max. Speed (km/h)</string>
    <string name="please_wait">Please wait</string>
    <string name="routes_list">Saved routes</string>
    <string name="title_activity_my_route">MyRouteActivity</string>
    <string name="title_activity_route_map">RouteMapActivity</string>
    <string name="title_activity_about">About</string>
    <string name="action_directions">Hide directions</string>
    <string name="current_speed_lbl">Speed (km/h)</string>
    <string name="current_distance_lbl">Distance (km)</string>
    <string name="average_lbl">Average</string>
    <string name="current_lbl">Current</string>
    <string name="timer_lbl">Timer</string>
    <string name="max_speed">Maximum</string>
    <string name="about">About</string>
    <string name="notFound">Not Found</string>
    <string name="kmMovingOn">km moving on</string>
    <string name="minutes">minutes</string>
</resources>
