<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_above="@+id/tableLayout">

        <!-- Google map -->
        <!--<FrameLayout-->
            <!--android:id="@+id/map"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent" />-->

        <com.google.android.gms.maps.MapView
            android:id="@+id/map"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <!--com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        /-->
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:background="#ffff0000"
        android:gravity="bottom"
        android:id="@+id/tableLayout"
        android:visibility="gone">

        <TableRow
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/current_distance_lbl"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/current_speed_lbl"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:gravity="right"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="0.00"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:id="@+id/current_distance"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_gravity="center" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:background="#ffff0000"
                android:layout_marginLeft="@dimen/activity_horizontal_margin">

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_centerHorizontal="true"
                    android:gravity="center|center_horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/average_lbl"
                    android:textStyle="bold"
                    android:textColor="@color/gray"
                    />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/current_lbl"
                    android:textStyle="bold"
                    android:textColor="@color/gray"
                    />

                </TableRow>
                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_centerHorizontal="true"
                    android:gravity="center|center_horizontal">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="0.00"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:id="@+id/current_average"
                        />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="0.00"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:id="@+id/current_speed"
                        />

                </TableRow>
                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_centerHorizontal="true"
                    android:gravity="center|center_horizontal">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/max_speed"
                        android:textStyle="bold"
                        android:textColor="@color/gray"
                        />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="0.00"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:id="@+id/current_max_speed"
                        />

                </TableRow>

            </TableLayout>

        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/timer_lbl"
                android:textStyle="bold"
                android:textColor="@color/gray"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="0.00"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:id="@+id/timer"
                />

        </TableRow>




    </TableLayout>

    <eu.city4age.android.SlidingUpPanelLayout
        xmlns:sothree="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sliding_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:gravity="bottom"
        >
        <!-- MAIN CONTENT -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical"

            android:id="@+id/frame_layout"
            android:background="#00ff0000">

            <TextView
                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:clickable="true"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:textSize="16sp" />
        </FrameLayout>
        <!-- SLIDING LAYOUT -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#40000000"
            android:orientation="vertical"
            android:id="@+id/dragView">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="15dp"
                    android:src="@drawable/weather_icon" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:layout_below="@+id/imageView"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:src="@drawable/thermometer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/thermometerView"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@+id/imageView2"
                    android:layout_below="@+id/imageView"
                    android:layout_toRightOf="@+id/imageView2" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView3"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_below="@+id/imageView"
                    android:layout_toRightOf="@id/thermometerView"
                    android:src="@drawable/wind" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/windView"
                    android:layout_below="@+id/imageView"
                    android:layout_toRightOf="@id/imageView3"/>





                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView4"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_below="@+id/imageView2"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/droplets" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/humidityView"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_below="@+id/imageView2"
                    android:layout_toRightOf="@id/imageView4"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView5"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_below="@+id/imageView2"
                    android:layout_alignStart="@+id/imageView3"
                    android:layout_alignLeft="@+id/imageView3"
                    android:layout_toRightOf="@id/humidityView"
                    android:src="@drawable/compass" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/compassView"
                    android:layout_below="@+id/imageView2"
                    android:layout_toRightOf="@id/imageView5"/>



                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView6"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_below="@+id/imageView5"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/pressure" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pressureView"
                    android:layout_below="@+id/imageView5"
                    android:layout_toRightOf="@id/imageView6"/>


            </RelativeLayout>

        </LinearLayout>
    </eu.city4age.android.SlidingUpPanelLayout>



</RelativeLayout>